--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="journal.html">Journal</a></li>
         </ul>
     </header>
-    <img src="aestheticpicture.png" alt="superaesthetic picture" class="style-img-1">
+    <img src="img/aestheticpicture.png" alt="superaesthetic picture" class="style-img-1">
     <h1 class="style-3">WELCOME</h1>
     <div class="style-2">
         <p class="style-1">Hi. I'm Liberosis and this is my website.
@@ -25,4 +25,5 @@
         </p>
     </div>
 </body>
+
 </html>
