--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,8 @@
         </ul>
     </header>
     <p class="style-1" ></p>
-    <img src="Me.png" alt="It's me :-D" class="style-img-2">
+    <img src="img/Me.png" alt="It's me :-D" class="style-img-2">
     <p class="style-1" >← It's my sona (updated)</p>
 </body>
+
 </html>
