--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
             Later, my ocs reference sheets, 
             exe files of my games (when I finish one), 
             information about my projects and much more will be here.
+            (I just checked how it looks on the phone and it's very bad, but I'll try to fix it.)
         </p>
     </div>
 </body>
 
 </html>
+
