--- a/index.html
+++ b/index.html
@@ -3,29 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>My site :-D</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body class="style-bg">
-    <header>
-        <ul >
-            <li><a href="#">Home</a></li>
-            <li><a href="aboutme.html">About me</a></li>
-            <li><a href="journal.html">Journal</a></li>
-        </ul>
-    </header>
-    <img src="img/aestheticpicture.png" alt="superaesthetic picture" class="style-img-1">
-    <h1 class="style-3">WELCOME</h1>
-    <div class="style-2">
-        <p class="style-1">Hi. I'm Liberosis and this is my website.
-            There's not much content here yet, but I'm still working on it.<br>
-            Later, my ocs reference sheets, 
-            exe files of my games (when I finish one), 
-            information about my projects and much more will be here.
-            (I just checked how it looks on the phone and it's very bad, but I'll try to fix it.)
-        </p>
+<body class="style-bg-1">
+  <header>
+      <nav aria-label="main navigation">
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutme.html">About me</a></li>
+              <li><a href="journal.html">Journal</a></li>
+          </ul>
+      </nav>
+  </header>
+  
+  <div class="container-1">
+    <div class="left-image">
+      <img src="img/face.webp" class="imgsize-1" alt="Face">
     </div>
+    <div class="center-text">
+      <section>
+        <article>
+          <h1 class="fontsize-2 style-2">Welcome</h1>
+          <p class="fontsize-1 style-1 style-border-1 text-left">
+            Hi! I'm Liberosis and this is my website.
+            There's not as much content here as I'd like, but I'm still working on it.
+          </p>
+        </article>
+      </section>
+    </div>
+    <div class="right-image">
+      <img src="img/face2.webp" class="imgsize-1" alt="Face">
+    </div>
+  </div>
+  
+  <hr class="line-1">
+  <hr class="line-2">
+
+  <div class="images-container">
+    <div class="image-column left-column">
+      <img src="img/face3.png" class="column-img" alt="Face">
+      <img src="img/column.png" class="column-img" alt="Column">
+      <img src="img/face4.png" class="column-img" alt="Face">
+    </div>
+    <div>
+      <p class="fontsize-1 style-1">Here you can find info about my future projects.</p>
+      <a href="myprojects.html" class="fontsize-1 style-1">Clik</a>
+    </div>
+    <div class="image-column right-column">
+      <img src="img/face3.png" class="column-img flipped" alt="Face mirrored">
+      <img src="img/column.png" class="column-img flipped" alt="Column mirrored">
+      <img src="img/face4.png" class="column-img flipped" alt="Face mirrored">
+    </div>
+  </div>
+
+  <footer>
+    <p class="fontsize-1 style-1">Thanks to these cool guys: Gan (my friend) and justadevvv on <a href="https://bsky.app/profile/justadevvv.bsky.social" class="style-1">Bluesky</a></p>
+  </footer>
 </body>
-
 </html>
-
