--- a/aboutme.html
+++ b/aboutme.html
@@ -3,20 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
+    <title>My site :-D</title>
      <link rel="stylesheet" href="index.css">
 </head>
-<body class="style-bg">
+<body class="style-bg-1">
     <header>
         <ul >
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">About me</a></li>
+            <li><a href="aboutme.html">About me</a></li>
             <li><a href="journal.html">Journal</a></li>
         </ul>
     </header>
-    <p class="style-1" ></p>
-    <img src="img/Me.png" alt="It's me :-D" class="style-img-2">
-    <p class="style-1" >← It's my sona (updated)</p>
+    <h1 class="fontsize-2 style-1 center-text">Liberosis</h1>
+    <img src="img/me.png" class="imgsize-2">
+    <div>
+        <p class="fontsize-1 style-1">
+            I don't really like to talk about myself, 
+            so I don't want to divulge some of my personal information 
+            (such as name, age, my nationality, etc.) 
+            I think I appreciate it more when people are interested in 
+            my projects than in my personal life. 
+            However, since we're on this page, 
+            I suppose I should share some information about myself. <br>
+            So, in my free time, I like to draw and daydream. 
+            I have many different hobbies, for example, wood carving, 
+            scrapbooking and doing jigsaw puzzles. 
+            I also enjoy basic things like listening to music and playing computer games. <br> 
+            My favorite music bands are Reel Big Fish, 
+            Sounds of Salvation, Deluxtone Rockets, 
+            The Aquabats and The Pietasters. 
+            As you probably already guessed, I love ska music. <br> 
+            My favorite games are Subnautica, The Binding of Isaac, 
+            Balatro, Portal 2, Picayune Dreams and Pixel Dungeon. 
+            I recently bought Mewgenics and I hope it will be good. 
+            At the moment, I'm learning C# to make my own games. 
+            They will all be free and available on this website or on itch.io <br> 
+            Besides all of the above, I'm also interested in indie animation.
+        </p>
+    </div>
+    <footer>
+    <p class="fontsize-1 style-1">Thanks to these cool guys: Gan (my friend) and justadevvv on <a href="https://bsky.app/profile/justadevvv.bsky.social" class="style-1">Bluesky</a></p>
+    </footer>
 </body>
-
 </html>
