--- a/journal.html
+++ b/journal.html
@@ -3,19 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Journal</title>
+    <title>My site :-D</title>
      <link rel="stylesheet" href="index.css">
 </head>
-<body class="style-bg">
+<body class="style-bg-1">
     <header>
         <ul >
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutme.html">About me</a></li>
-            <li><a href="#">Journal</a></li>
+            <li><a href="journal.html">Journal</a></li>
         </ul>
     </header>
-    <p class="style-1">25/01/2026 <br>
-        The website site looks terrible so far, but I will keep updating it.
+    <p class="fontsize-1 style-1">25/01/2026 <br>
+        The website site looks terrible so far, but I will keep updating it.<br>
+        04/02/2026 <br>
+        New update. Now you can read info about my future projects.<br>
+        23/02/2026 <br>
+        Today is my birthday. Unfortunately, I don't have much free time to update the website. 
+        I didn't have a clear idea of what it should look like, so it took a lot longer than it should have. 
+        There is a lot more information here now than before, which is already encouraging. 
+        And besides, I found a few bugs in my code.
     </p>
+    <footer>
+    <p class="fontsize-1 style-1">Thanks to these cool guys: Gan (my friend) and justadevvv on <a href="https://bsky.app/profile/justadevvv.bsky.social" class="style-1">Bluesky</a></p>
+    </footer>
 </body>
 </html>
